--- a/strawberry.org
+++ b/strawberry.org
@@ -49,27 +49,6 @@ Major version log:
 - July 2016 :: multi-objective version extended to work for any number of criteria instead of just 2.
 - October 2015 :: started work on a MI-Strawberry version, hopefully as upwards compatible as possible.
 - September 2015 :: implemented a rank based fitness, used to prepare results in [[file:~/synced/research/multiobjective.optimisation/strawberry/paper.pdf][the paper on understanding the impacts of constraints]].  There is now a choice of fitness functions as the old, Pareto based, fitness function is still available (cf. Deb (2000) for an example).
-
-#+name: version
-#+begin_src octave :tangle strawberry_initialise.m
-  function strawberry_initialise
-    global strawberry_version
-    global strawberry_octave
-    global moga_version
-    global mosd_version
-    if isempty (strawberry_version)
-      strawberry_version = '2016.09.12 15:40:24';
-      mosd_initialise
-      moga_initialise
-      printf (': STRAWBERRY %s, main function\n', strawberry_version)
-      printf (': using MOSD %s, multi-objective steepest descent method.\n', mosd_version)
-      printf (': and MOGA %s, multi-objective genetic algorithm fitness function.\n', moga_version)
-      strawberry_octave = exist ('OCTAVE_VERSION', 'builtin') > 0
-      if strawberry_octave
-        pkg load parallel             #need parcellfun in particular
-      endif
-    endif
-#+end_src
 * TODO [0/9] improvements or bugs                             :noexport:
 - [ ] handling /uncertainty/ in strawberry with either probability distribution functions (*pdf*) or intervals.  The latter should be easier and possibly sufficient.
 - [ ] *mixed-integer* Strawberry:
@@ -225,6 +204,40 @@ To accomplish the latter, we consider a ranking that takes into account how good
     endif
   endfunction
 #+end_src
+* initialise -- default values and version information
+
+#+name: version
+#+begin_src octave :tangle strawberry_initialise.m
+  function strawberry_initialise
+    global strawberry_version
+    global strawberry_octave
+    global moga_version
+    global mosd_version
+    if isempty (strawberry_version)
+      strawberry_version = '2016.10.14 18:40:03';
+      mosd_initialise
+      moga_initialise
+      printf (': STRAWBERRY %s, main function\n', strawberry_version)
+      printf (': using MOSD %s, multi-objective steepest descent method.\n', mosd_version)
+      printf (': and MOGA %s, multi-objective genetic algorithm fitness function.\n', moga_version)
+      strawberry_octave = exist ('OCTAVE_VERSION', 'builtin') > 0
+      if strawberry_octave
+        pkg load parallel             #need parcellfun in particular
+      endif
+    endif
+#+end_src
+We define default functions for the key steps in the strawberry algorithm:
+- new solution :: generate a random solution in the search space
+- neighbour :: given an existing point in the search space, generate a new solution based on the fitness value (0<f<1 with 1 most fit) given
+These functions allow strawberry to be used for more general problems than just nonlinear programming problems.  The default functions, however, are suitable for compact domains defined by bounds in the R^n.
+#+begin_src octave :tangle strawberry_initialise.m
+  if isempty(strawberry_randomsolutionfn)
+    strawberry_randomsolutionfn = @strawberry_randomsolution;
+  endif
+  if isempty(strawberry_neighbourfn)
+    strawberry_neighbourfn = @strawberry_neighbour;
+  endif
+#+end_src
 * isdiverse
 We only want to add solutions to the population that are diverse, i.e. significantly different, from those that are already there.  However, the diversity control should not be at the expense of losing better solutions.  The current implementation is not good in this respect and should be used with care as a result.
 #+begin_src octave :tangle strawberry_isdiverse.m
@@ -331,6 +344,16 @@ Especially for multi-objective problems, we have a problem with diversity in tha
         endif
       endfor
     endif
+  endfunction
+#+end_src
+* random solution -- generate a new solution in the search space
+By default, this function returns a random solution in a compact hypercube domain in R^n defined by the bounds on the variables.  The default function requires the definition of the lower and upper bounds for the domain.
+#+begin_src octave :tangle strawberry_random
+  function x = strawberry_random()
+    global strawberry_lower
+    global strawberry_upper
+    r = rand(length(strawberry_lower),1);
+    x = strawberry_lower + r.*(strawberry_upper-strawberry_lower);
   endfunction
 #+end_src
 * runners
