--- a/strawberry.org
+++ b/strawberry.org
@@ -214,7 +214,7 @@ To accomplish the latter, we consider a ranking that takes into account how good
     global moga_version
     global mosd_version
     if isempty (strawberry_version)
-      strawberry_version = '2016.10.14 18:42:53';
+      strawberry_version = '2016.10.15 17:07:46';
       mosd_initialise
       moga_initialise
       printf (': STRAWBERRY %s, main function\n', strawberry_version)
@@ -261,6 +261,22 @@ We only want to add solutions to the population that are diverse, i.e. significa
       i = i + 1;
     endwhile
     if ~ diverse, nsimilar = nsimilar + 1; endif
+  endfunction
+#+end_src
+* neighbour -- generate a neighbouring (fitness dependent) solution
+Given a fitness value and a point in the search space, generate a new point in the space.  The better the fitness, the closer the point should be to the given point.  The basis of the Strawberry algorithm is that fit points generate more points in the local area; less fit points generate fewer new points but further away.  Exploitation versus exploration.
+
+The default implementation uses the fitness to define a distance within the bounds of the variables for each dimension.
+#+begin_src octave :tangle strawberry_neighbour.m
+  function n = strawberry_neighbour(x,f)
+    global strawberry_lower strawberry_upper
+    nx = length(x);
+    dx = (strawberry_upper-strawberry_lower)/2 .* strawberry_distance (f,nx); # how far to run
+    ## fprintf(stderr, 'Selected %d with fitness %g to move %g\n', s, N(s), norm(dx))
+    debugprint(3, ': dx', dx(1:nx))
+    n = x+dx;
+    n(n<a) = a(n<a);        # reset to boundary
+    n(n>b) = b(n>b);        # reset to boundary
   endfunction
 #+end_src
 * newpopulation
